tests/NormalTests/paczka1/small_fuzzy/82980818.err
Error in line 4: T9yTIJ S121 7,3
Error in line 13: S7 A784 83,3
